--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome Liberary -->
     <link rel="stylesheet" href="css/all.min.css">
+<!--   adding this line for learning how to make changes 9/6/2021   -->
 </head>
 <body>
 <!-- Start Header -->
