Mdified the index file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!--   adding this line for learning how to make changes 9/6/2021   -->
 </head>
 <body>
+    <div>Make changes for learning 11062021 04:57</div>
 <!-- Start Header -->
     <header class="header">
             <div class="container">
